feat: add new frontend ui
